[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Costa <costa86.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27.0"
tabled = "0.7.0"
clap = { version = "3.2.5", features = ["derive"] }
chrono = "0.4"
